--- a/styles/styles.css
+++ b/styles/styles.css
@@ -348,8 +348,10 @@ select{
 .megaMenuOverall{
   display: inline-block;
   position: absolute;
-  left: -8px;
+  left: 8px;
 }
+
+
 
 .megaMenuTopContainer{
   padding-bottom: 8px; /*means that the mega menu sub menu appears below*/
@@ -357,7 +359,10 @@ select{
 
 .megaMenuSubMenu{
   background-color:	#606060;
+
 }
+
+
 
 .hidden {
   visibility: hidden;
@@ -461,7 +466,9 @@ select{
   border-right-style: solid;
 }
 
-
+.tabPanelBottomPadding{
+  padding-bottom: 6rem;
+} /*not sure why but the tab panel isn't giving content underneath space, this is to provide the needed padding*/
 
 
 /*WINDOW PAGE*/
